Fix figcaption by wrapping in figure instead of div

--- a/css/index.css
+++ b/css/index.css
@@ -83,6 +83,11 @@
     overflow: hidden;
 }
 
+figure {
+    margin: 0;
+    padding: 0;
+}
+
 @media (min-width: 600px) {
     .slide-gallery {
         --gallery-img-width: 600px;
@@ -162,7 +167,7 @@
     color: rgb(var(--clr-neutral-2));
 }
 
-.balls {
+.dots {
     position: absolute;
     display: flex;
     bottom: 2.5em;
@@ -171,7 +176,7 @@
     z-index: 1;
 }
 
-.balls .ball {
+.dots .dot {
     width: 0.75em;
     aspect-ratio: 1 / 1;
     border: 1px solid rgb(var(--clr-neutral-3));
@@ -181,7 +186,7 @@
     cursor: pointer;
 }
 
-.balls .active {
+.dots .active {
     background-color: rgba(var(--clr-neutral-2), 0.6);
 }
 
